--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,8 +4,8 @@
 
 :root {
   --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --background-start-rgb: 125, 211, 252;
+  --background-end-rgb: 4, 105, 161;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -24,4 +24,8 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+}
+
+input {
+    @apply shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight text-sm;
 }
