--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -27,5 +27,5 @@ body {
 }
 
 input {
-    @apply shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight text-sm;
+    @apply shadow-sm appearance-none border rounded w-full m-[1px] py-2 px-3 text-gray-700 leading-tight text-sm focus:outline-none focus:border-sky-600 focus:border-2 focus:m-0;
 }
